Separated Libraries from Entry
Now loading other libraries and helper independently. Loading only structure.
Relocated Thirdparty CSS Font-Icons Libraries
Relocated:
- Bootstrap Icons
- Material Design Icons
- Themify Icons
- Fontawesome Icons

1. Using CSS Font-Icons format as <name>.icons.<extension>
2. Added 4 new colors.
- Silver
- Accent
- Color-1 <-- Extra spaces
- Color-2 <-- Extra spaces
3. Refactored tabs-colors
- Default is all transparent.
- Now using after content a highlighter.
- Added fill & prefill.
4. Refactored class declarations.
  Now using @Mixins to cut down repeated declarations.
- flex-center
- absolute-content
- before-content
- after-content
5 Added Material design tabs style.
6. Added compact style on table-container/tables
7. Added title-strick component.
8. Added connectors to item-list component.
9. Added float component.
10. Remover card-list classname.
11. Added foreground color HSL to colors.
12. Added gaps to priemefaces carousel.
13. Added 1-10 numb loop for sizing anything.
14. :star: Added VX favicon.
Other Refactoring, Stylings & Fixes.
:hotsprings:

--- a/css/animations.css
+++ b/css/animations.css
@@ -87,7 +87,7 @@
 }
 
 .ind-x {
-  animation: x-ind-move 1.2s ease-out infinite;
+  animation: x-ind-move 1.2s ease-out backwards infinite;
 }
 
 .spin {
