--- a/css/icons/external/themify.icons.css
+++ b/css/icons/external/themify.icons.css
@@ -1,12 +1,12 @@
 @font-face {
-	font-family: 'themify';
-	src: url(../fonts/themify.woff?-fvbane) format('woff');
+	font-family: 'themify-icons';
+	src: url('/fonts/themify-icons.woff?-fvbane') format('woff');
 	font-weight: 400;
 	font-style: normal;
 }
 
 .ti {
-	font-family: 'themify';
+	font-family: 'themify-icons';
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
